    function. Models fitted with the new default
    (\code{F.adaptive=FALSE, F.method="iso"})
    will likely differ from previous fits (\code{F.adaptive=TRUE}),
    and the numerical difference depends on 
    the adaptive bandwidth used before (the default \code{adapt=0.1}
    yielded a rather rough approximation of the integral).
  }
}
  
\subsection{MINOR CHANGES}{
  \itemize{
    \item \code{twinstim(..., siaf = siaf.gaussian())}
    uses a larger default initial value for the kernel's standard
    deviation (based on the size of the observation region).

    \item Non-default parametrizations of \code{siaf.gaussian()} are
    deprecated, i.e., always use \code{logsd=TRUE} and \code{density=FALSE}.

    \item \code{twinstim()} uses a smaller default initial value for the
    epidemic intercept, which usually allows for faster convergence.

    \item \code{update.hhh4()} now allows \code{subset.upper} values
    beyond the originally fitted time range (but still within the time
    range of the underlying \code{"sts"} object).
  }
}

\subsection{BUG FIXES}{
  \itemize{
    \item The C-routines introduced in version 1.14.0 used \code{==}
    comparisons on parameter values to choose among case-specific
    formulae (e.g., for \eqn{d==2} in \code{siaf.powerlaw()}).
    We now employ an absolute tolerance of 1e-7 (which should fix
    the failing tests on Solaris).
  }
}

}


\section{Changes in surveillance version 1.14.0 (2017-06-29)}{

\subsection{DOCUMENTATION}{
  \itemize{
    \item The replication code from Meyer et al. (2017, JSS)
    is now included as \code{demo("v77i11")}.
    It exemplifies the spatio-temporal endemic-epidemic modelling
    frameworks \code{twinstim}, \code{twinSIR}, and \code{hhh4}
    (see also the corresponding vignettes).
  }
}

\subsection{NEW FEATURES}{
  \itemize{
    \item Pure C-implementations of integration routines for spatial
    interaction functions considerably accelerate the estimation of