@@ -472,6 +472,7 @@ export(plotHHH4_fitted, plotHHH4_fitted1,
        plotHHH4_maps, plotHHH4_ri,
        plotHHH4_neweights)
 
+S3method(confint, oneStepAhead)
 S3method(scores, default)
 S3method(scores, hhh4)
 S3method(scores, oneStepAhead)
